# tradingbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_COMPREHENSIVE.md  analys_strategier,.md  docker-compose.yml  fix_runner_script.py  fix_script.py  mypy.ini  pyproject.toml  requirements.txt  strategy.json
.github/: GROK.md  pull_request_template.md
app/: __init__.py  advanced_risk.py  automated_reporting.py  data_validation.py  monitoring.py
docs/: ARCHITECTURE.md  CODE_GUIDELINES.md  RESULTS.md  ROADMAP.md  RUNBOOK.md  STRATEGIES.md  STRATEGY_MODULE_VISION.md  strategies_introspection.json  strategies_registry.json
scripts/: README.md  ai_strategy_runner.py  backup_restore.py  circuit_breaker.py  dca_scheduler.py  debug_ai_strategies.py  download_data.py  download_talib.py  fix_runner_completely.py  fix_runner_duplicates.py  fix_runner_syntax.py  rebuild_runner.py  render_results_report.py  run_live.py  strategies_registry_export_sqlite.py  strategies_registry_sync.py  strategy_cli.py  test_ai_integration.py
tests/: conftest.py  test_ai_strategies.py  test_hyperopt_metrics.py  test_integration_pipeline.py  test_integration_strategy_flow.py  test_metrics.py  test_onchain_adapter.py  test_reasoning_models.py  test_registry.py  test_reporting.py  test_reporting_extended.py  test_risk_circuit_breaker.py  test_risk_concurrency.py  test_risk_drawdown.py  test_risk_extended.py  test_risk_incidents.py  test_risk_live_guardrails.py  test_runner.py  test_strategy_error_logging.py  test_strategy_smoke.py  test_strategy_smoke_new.py
(+74 files in other folders)
