[project]
name = "tradingbot"
version = "0.1.0"
description = "A Freqtrade-based trading bot with enhanced reasoning capabilities."
requires-python = ">=3.10"

dependencies = [
    "freqtrade",
    "pandas",
    "numpy",
    "scipy",
    "web3>=6.0.0"
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "black",
    "ruff",
    "isort",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["user_data*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
py_version = 311

[tool.ruff]
line-length = 100
select = [
  "E","F","I","UP","B","S","W","C90"
]
ignore = [
  "E501"  # handled by black
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

